# simple_ipc

./: CMakeLists.txt  README.md  input.txt
common/: CMakeLists.txt
common/include/: message.h  utils.h
common/src/: message.cpp  utils.cpp
common/test/: CMakeLists.txt
common/test/src/: main.cpp  message_deserialize_test.cpp  message_serialize_test.cpp  sample_test.cpp
program1/include/: cmd_parser.h
program1/src/: cmd_parser.cpp  main.cpp
program2/include/: draw_msg_visitor.h  print_msg_visitor.h
program2/src/: draw_msg_visitor.cpp  main.cpp
